syntax = "proto3";

package order;

option go_package = "/proto/order;order";

service OrderService {
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
}

message PlaceOrderRequest {
    string product_id = 1;
    int32 quantity = 2;
}

message PlaceOrderResponse {
    string status = 1;
    int32 remaining_stock = 2;
}
